--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE>
 <html>
 <head>
-
+<style>
+#container {
+	background: url('kyoto.jpg');
+}
+</style>
 </head>
 <body>
-	TEST	
+	<div id="container">
+
+	</div>
 </body>
 </html>
